<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <LinearLayout
                  android:id="@+id/musicPlayer"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center_vertical"
                  android:orientation="vertical"
                  android:visibility="gone"
                  >

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cloud_sleep_tight"
            android:contentDescription="@string/cloud_sleep_tight_image" />

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorAccent"
                android:weightSum="3">

            <ImageButton
                    android:id="@+id/previous_song_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                android:contentDescription="@string/skip_previous_image"
                android:padding="10dp"
                    android:src="@drawable/ic_skip_previous_black"
                    android:background="?android:attr/selectableItemBackground"
                android:layout_weight="1"
                app:tint="#FFFFFF" />


            <ImageButton
                    android:id="@+id/play_pause_song_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                android:contentDescription="@string/play_image"
                android:padding="10dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_play_arrow_black"
                android:layout_weight="1"
                app:tint="#FFFFFF" />


            <ImageButton
                    android:id="@+id/next_song_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                android:contentDescription="@string/skip_next_image"
                android:padding="10dp"
                    android:src="@drawable/ic_skip_next_black"
                    android:background="?android:attr/selectableItemBackground"
                android:layout_weight="1"
                app:tint="#FFFFFF" />

        </LinearLayout>


        <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin">

            <!-- SeekBar height must be the same size as ImageView-->
            <SeekBar
                    android:id="@+id/volumeSeekbar"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignBaseline="@+id/imgVolume"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/volumeText"
                    android:layout_toEndOf="@+id/imgVolume"
                    android:max="30"/>

            <TextView
                    android:id="@+id/volumeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            <ImageView
                    android:id="@+id/imgVolume"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/volumeText"
                    android:background="@drawable/ic_volume_up_black"
                    android:backgroundTint="@color/md_grey_500"
                android:contentDescription="@string/volume_up_image" />

        </RelativeLayout>

    </LinearLayout>

    <top.defaults.colorpicker.ColorPickerView
            android:id="@+id/colorPicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:enableBrightness="true"
            app:enableAlpha="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintBottom_toTopOf="@+id/nav_view" app:layout_constraintVertical_bias="0.304"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:contentDescription="@string/floating_action_button"
        app:elevation="6dp"
            app:borderWidth="0dp"
            android:id="@+id/fabButton"
            android:tint="@android:color/white"
            android:src="@drawable/ic_lightbulb_outline_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/nav_view"
            android:layout_marginBottom="56dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
                  android:visibility="gone"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:id="@+id/settingsForm" app:layout_constraintBottom_toBottomOf="parent">
        <EditText
            android:autofillHints="@string/particle_api_url"
            android:inputType="textUri"
            app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/particle_api_url_field"
                android:hint="@string/particle_api_url"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <EditText
            android:autofillHints="@string/particle_device_id"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="10dp"
                android:hint="@string/particle_device_id"
                android:id="@+id/particle_device_id_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <EditText
            android:autofillHints="@string/particle_token_id"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/particle_token_id_field"
                android:hint="@string/particle_token_id"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/test_connection"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/test_connection_button"
        />

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/favourite_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/favourite_color_button"
        />

        <EditText
            android:autofillHints="@string/your_favourite_color_int_code"
            android:inputType="number"
            android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/favourite_color_field"
                android:hint="@string/your_favourite_color_int_code"
                android:layout_margin="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_nav_menu"/>
    <androidx.constraintlayout.widget.Barrier android:layout_width="wrap_content" android:layout_height="wrap_content"
                                              android:id="@+id/barrier" app:barrierDirection="left"/>

</androidx.constraintlayout.widget.ConstraintLayout>